<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Anyad\'s Todos</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Add a Task</string>
    <string name="button_add">Add</string>
    <string name="button_archive">A</string>
    <string name="button_mail">M</string>
    <string name="button_sum">S</string>
    <string name="button_home">H</string>
    <string name="email_screen_title">EMAIL</string>
    <string name="goback">back</string>
    <string name="check_all">send all tasks</string>
    <string name="email">send selected tasks</string>
    <string name="sum_screen_title">Summaries</string>
    <string name="unc_num">#</string>
    <string name="arc_num">#</string>
    <string name="c_and_arc_num">#</string>
    <string name="unc_and_arc_num">#</string>
    <string name="total_num">#</string>
    <string name="check_num">#</string>
    <string name="unc_and_arc_w">Unchecked &amp; Archived Tasks</string>
    <string name="c_and_arc_w">Checked &amp; Archived Tasks</string>
    <string name="arc_w">Archived Tasks</string>
    <string name="unc_w">Unchecked Tasks</string>
    <string name="check_w">Checked Tasks</string>
    <string name="total_w">Total Tasks</string>
    <string name="title_activity_archive_list_activities">ArchiveListActivities</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_mail_items">MailItemsActivity</string>
    <string name="title_activity_archive_tasks">ArchiveTasksActivity</string>
    <string name="title_activity_summaries">SummariesActivity</string>
    <string name="title_activity_edit_tasks">EditTasksActivity</string>
    <string name="checkedTitle">Checked</string>
    <string name="uncheckedTitle">Unchecked</string>
    <string name="archTitle">Archived &amp; Checked</string>
    <string name="aruchTitle">Archived &amp; Unchecked</string>
    <string name="line"> </string>
    <string name="archive">Archive</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name ="arch_tasks">Archived Tasks</string>
    <string name ="reg_tasks">Regular Tasks</string>

</resources>
